[project]
name = "tokenator"
version = "0.1.0"
description = "A script to count the number of AI context tokens your codebase would consume"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "humanfriendly>=10.0",
    "rich>=14.3.3",
    "rich-argparse>=1.7.2",
    "tiktoken>=0.12.0",
]

[project.scripts]
tokenator = "main:main"

[tool.uv]
package = true
